Add git clone command

--- a/sanitycheck/update_sources.ipynb
+++ b/sanitycheck/update_sources.ipynb
@@ -10,8 +10,9 @@
     "from google.colab import drive\n",
     "drive.mount('/content/drive')\n",
     "\n",
-    "#!git clone https://github.com/allnightlight/AnApplicationOfSoftActorCriticToWasteWaterTreatmentPlant.git\n",
-    "\n",
+    "# %cd /content/drive/My Drive/\n",
+    "# !git clone -b sanitycheck https://github.com/allnightlight/AnApplicationOfSoftActorCriticToWasteWaterTreatmentPlant.git\n",
+    "    \n",
     "# To update the work environment\n",
     "%cd /content/drive/My Drive/AnApplicationOfSoftActorCriticToWasteWaterTreatmentPlant\n",
     "!git pull\n",
