Added alphaTemp in the note

--- a/sanitycheck/work001main.ipynb
+++ b/sanitycheck/work001main.ipynb
@@ -38,30 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "utility = Work001Utility.create(nIter = 2**1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Check update state value function:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "utility.checkUpdateV()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Please, check if the above figure has the peak at x = 1"
+    "utility = Work001Utility.create(nIter = 2**10, alphaTemp=1.0)"
    ]
   },
   {
@@ -78,6 +55,29 @@
    "outputs": [],
    "source": [
     "utility.checkUpdateQ()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please, check if the above figure has the peak at x = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check update state value function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utility.checkUpdateV()"
    ]
   },
   {
