Modified note of work004 sanity check

--- a/sanitycheck/work004main.ipynb
+++ b/sanitycheck/work004main.ipynb
@@ -18,6 +18,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you would like to replicate this notebook 5 times, run the next two cells after commentout."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "var notebook_name = document.body.attributes['data-notebook-name'].value\n",
+    "IPython.notebook.kernel.execute(`NOTEBOOK_NAME = '${notebook_name}'`);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import shutil\n",
+    "# for k1 in range(5):\n",
+    "#     shutil.copy(NOTEBOOK_NAME, \"copy%d_\" % k1 + NOTEBOOK_NAME)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -40,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app, store = Work004Utility.create()"
+    "app, store = Work004Utility.create(nAgent=2**10, nEpoch=2**11)"
    ]
   },
   {
@@ -56,28 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nEpoch = 2**11\n",
-    "\n",
-    "while True:\n",
-    "    buildParameter = ConcreteBuildParameter(nIntervalSave = nEpoch//2\n",
-    "                                        , nEpoch = nEpoch\n",
-    "                                        , label = \"test\"\n",
-    "                                        , plantClass = \"ConcretePlant001\"\n",
-    "                                        , discountFactor = 0.\n",
-    "                                        , alphaTemp = float(np.random.choice([1e-1, 1e+1]))\n",
-    "                                        , saveFolderPathAgent = \"checkpoint\"\n",
-    "                                        , nFeature = 1\n",
-    "                                        , nSampleOfActionsInValueFunctionApproximator = int(np.random.choice([2**0, 2**3]))\n",
-    "                                        , nHiddenValueFunctionApproximator = 2**5\n",
-    "                                        , nStepEnvironment = 1\n",
-    "                                        , nStepGradient = int(np.random.choice([2**0, 2**3]))\n",
-    "                                        , nIntervalUpdateStateValueFunction = 1\n",
-    "                                        , nIterationPerEpoch = 1\n",
-    "                                        , bufferSizeReplayBuffer = 2**10\n",
-    "                                        , featureExtractorClass = \"ConcreteFeatureExtractor002\")\n",
-    "    \n",
-    "    print(\">> Call build command:\")\n",
-    "    app.build(buildParameter) "
+    "app.build() "
    ]
   },
   {
@@ -97,10 +105,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Remove all the remained files"
    ]
