--- a/sanitycheck/work004main.ipynb
+++ b/sanitycheck/work004main.ipynb
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app, store = Work004Utility.create(nAgent=2**10, nEpoch=2**11)"
+    "app, store, evaluationDb = Work004Utility.create(nAgent=2**10, nEpoch=2**11)"
    ]
   },
   {
@@ -117,7 +117,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# store.removeHistory()"
+    "# store.removeHistory()\n",
+    "# evaluationDb.removeRemainedFiles()"
    ]
   }
  ],
